Changed BasicException path in test and namespace

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Ms\\Exception\\": "src/",
+            "GMatrixTech\\Exception\\": "src/",
             "Tests\\": "tests/"
         }
     }
